--- a/Course 3 - Advance Computer Vision/W2/assignment/C3W2_Assignment.ipynb
+++ b/Course 3 - Advance Computer Vision/W2/assignment/C3W2_Assignment.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/psanogo/tensorflow-3-public/blob/main/Course%203%20-%20Advance%20Computer%20Vision/W2/assignment/C3W2_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "rOvvWAVTkMR7"
       },
       "source": [
@@ -52,7 +62,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "7dL8G46BU4Zy"
+      },
       "source": [
         "**Use the Fallback Runtime**\n",
         "\n",
@@ -62,7 +74,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "vnhWb8YqU4Zy"
+      },
       "outputs": [],
       "source": [
         "import sys\n",
@@ -208,20 +222,17 @@
       "source": [
         "### START CODE HERE (Replace Instances of `None` with your code) ###\n",
         "# import the label map utility module\n",
-        "from None import None\n",
+        "from object_detection.utils import label_map_util\n",
         "\n",
         "# import module for reading and updating configuration files.\n",
-        "from None import None\n",
+        "from object_detection.utils import config_util\n",
         "\n",
         "# import module for visualization. use the alias `viz_utils`\n",
-        "from None import None as None\n",
+        "from object_detection.utils import visualization_utils as viz_utils\n",
         "\n",
         "# import module for building the detection model\n",
-        "from None import None\n",
-        "### END CODE HERE ###\n",
-        "\n",
-        "# import module for utilities in Colab\n",
-        "from object_detection.utils import colab_utils"
+        "from object_detection.builders import model_builder\n",
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -380,43 +391,24 @@
       },
       "outputs": [],
       "source": [
-        "%matplotlib inline\n",
-        "\n",
         "### START CODE HERE (Replace Instances of `None` with your code) ###\n",
         "\n",
         "# assign the name (string) of the directory containing the training images\n",
         "train_image_dir = './training'\n",
         "\n",
         "# declare an empty list\n",
-        "train_images_np = None\n",
+        "train_images_np = []\n",
         "\n",
         "# run a for loop for each image\n",
         "for i in range(1, 6):\n",
         "\n",
         "    # define the path (string) for each image\n",
-        "    image_path = os.path.join(None)\n",
+        "    image_path = os.path.join(train_image_dir, 'training-zombie' + str(i) + '.jpg')\n",
         "    print(image_path)\n",
         "\n",
         "    # load images into numpy arrays and append to a list\n",
         "    train_images_np.append(load_image_into_numpy_array(image_path))\n",
-        "### END CODE HERE ###\n",
-        "\n",
-        "# configure plot settings via rcParams\n",
-        "plt.rcParams['axes.grid'] = False\n",
-        "plt.rcParams['xtick.labelsize'] = False\n",
-        "plt.rcParams['ytick.labelsize'] = False\n",
-        "plt.rcParams['xtick.top'] = False\n",
-        "plt.rcParams['xtick.bottom'] = False\n",
-        "plt.rcParams['ytick.left'] = False\n",
-        "plt.rcParams['ytick.right'] = False\n",
-        "plt.rcParams['figure.figsize'] = [14, 7]\n",
-        "\n",
-        "# plot images\n",
-        "for idx, train_image_np in enumerate(train_images_np):\n",
-        "    plt.subplot(1, 5, idx+1)\n",
-        "    plt.imshow(train_image_np)\n",
-        "\n",
-        "plt.show()"
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -651,14 +643,14 @@
         "### START CODE HERE (Replace instances of `None` with your code ###\n",
         "\n",
         "# Assign the zombie class ID\n",
-        "zombie_class_id = None\n",
+        "zombie_class_id = 1\n",
         "\n",
         "# define a dictionary describing the zombie class\n",
-        "category_index = None\n",
+        "category_index = {zombie_class_id: {'id': zombie_class_id, 'name': 'zombie'}}\n",
         "\n",
         "# Specify the number of classes that the model will predict\n",
-        "num_classes = None\n",
-        "### END CODE HERE ###"
+        "num_classes = 1\n",
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -916,15 +908,14 @@
         "\n",
         "### START CODE HERE ###\n",
         "# Download the SSD Resnet 50 version 1, 640x640 checkpoint\n",
-        "None\n",
+        "!wget http://download.tensorflow.org/models/object_detection/tf2/20200711/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.tar.gz\n",
         "\n",
         "# untar (decompress) the tar file\n",
-        "None\n",
+        "!tar -xf ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.tar.gz\n",
         "\n",
         "# copy the checkpoint to the test_data folder models/research/object_detection/test_data/\n",
-        "None\n",
-        "\n",
-        "### END CODE HERE"
+        "!mv ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/checkpoint models/research/object_detection/test_data/\n",
+        "### END CODE HERE\n"
       ]
     },
     {
@@ -973,19 +964,14 @@
       },
       "outputs": [],
       "source": [
-        "tf.keras.backend.clear_session()\n",
-        "\n",
-        "\n",
         "### START CODE HERE ###\n",
         "# define the path to the .config file for ssd resnet 50 v1 640x640\n",
-        "pipeline_config = None\n",
+        "pipeline_config = 'models/research/object_detection/configs/tf2/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8.config'\n",
         "\n",
         "# Load the configuration file into a dictionary\n",
-        "configs = None\n",
+        "configs = config_util.get_configs_from_pipeline_file(pipeline_config)\n",
         "\n",
-        "### END CODE HERE ###\n",
-        "# See what configs looks like\n",
-        "configs"
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -1029,11 +1015,9 @@
       "source": [
         "### START CODE HERE ###\n",
         "# Read in the object stored at the key 'model' of the configs dictionary\n",
-        "model_config = None\n",
+        "model_config = configs['model']\n",
         "\n",
-        "### END CODE HERE\n",
-        "# see what model_config looks like\n",
-        "model_config"
+        "### END CODE HERE\n"
       ]
     },
     {
@@ -1063,15 +1047,12 @@
       "source": [
         "### START CODE HERE ###\n",
         "# Modify the number of classes from its default of 90\n",
-        "None = None\n",
+        "model_config.ssd.num_classes = num_classes\n",
         "\n",
         "# Freeze batch normalization\n",
-        "None = None\n",
+        "model_config.ssd.freeze_batchnorm = True\n",
         "\n",
-        "### END CODE HERE\n",
-        "\n",
-        "# See what model_config now looks like after you've customized it!\n",
-        "model_config"
+        "### END CODE HERE\n"
       ]
     },
     {
@@ -1118,10 +1099,8 @@
       "outputs": [],
       "source": [
         "### START CODE HERE (Replace instances of `None` with your code) ###\n",
-        "detection_model = None\n",
-        "### END CODE HERE ###\n",
-        "\n",
-        "print(type(detection_model))"
+        "detection_model = model_builder.build(model_config=model_config, is_training=True)\n",
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -1487,11 +1466,11 @@
       "source": [
         "### START CODE HERE ###\n",
         "\n",
-        "tmp_box_predictor_checkpoint = None\n",
+        "tmp_box_predictor_checkpoint = tf.train.Checkpoint(\n",
+        "    _base_tower_layers_for_heads=detection_model._box_predictor._base_tower_layers_for_heads,\n",
+        "    _box_prediction_head=detection_model._box_predictor._box_prediction_head)\n",
         "\n",
-        "\n",
-        "\n",
-        "### END CODE HERE"
+        "### END CODE HERE\n"
       ]
     },
     {
@@ -1562,11 +1541,11 @@
       "source": [
         "### START CODE HERE ###\n",
         "\n",
-        "tmp_model_checkpoint = None\n",
+        "tmp_model_checkpoint = tf.train.Checkpoint(\n",
+        "    _feature_extractor=detection_model._feature_extractor,\n",
+        "    _box_predictor=tmp_box_predictor_checkpoint)\n",
         "\n",
-        "\n",
-        "\n",
-        "### END CODE HERE ###"
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -1655,15 +1634,15 @@
       "source": [
         "### START CODE HERE ###\n",
         "\n",
-        "checkpoint_path = None\n",
+        "checkpoint_path = 'models/research/object_detection/test_data/checkpoint/ckpt-0'\n",
         "\n",
         "# Define a checkpoint that sets `model` to the temporary model checkpoint\n",
-        "checkpoint = None\n",
+        "checkpoint = tf.train.Checkpoint(model=tmp_model_checkpoint)\n",
         "\n",
         "# Restore the checkpoint to the checkpoint path\n",
-        "None\n",
+        "checkpoint.restore(checkpoint_path)\n",
         "\n",
-        "### END CODE HERE ###"
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -1711,17 +1690,15 @@
         "### START CODE HERE (Replace instances of `None` with your code)###\n",
         "\n",
         "# use the detection model's `preprocess()` method and pass a dummy image\n",
-        "tmp_image, tmp_shapes = None\n",
+        "tmp_image, tmp_shapes = detection_model.preprocess(tf.zeros([1, 640, 640, 3]))\n",
         "\n",
         "# run a prediction with the preprocessed image and shapes\n",
-        "tmp_prediction_dict = None\n",
+        "tmp_prediction_dict = detection_model.predict(tmp_image, tmp_shapes)\n",
         "\n",
         "# postprocess the predictions into final detections\n",
-        "tmp_detections = None\n",
+        "tmp_detections = detection_model.postprocess(tmp_prediction_dict, tmp_shapes)\n",
         "\n",
-        "### END CODE HERE ###\n",
-        "\n",
-        "print('Weights restored!')"
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -1804,18 +1781,18 @@
         "### START CODE HERE (Replace instances of `None` with your code)###\n",
         "\n",
         "# set the batch_size\n",
-        "batch_size = None\n",
+        "batch_size = 4\n",
         "\n",
         "# set the number of batches\n",
-        "num_batches = None\n",
+        "num_batches = 100\n",
         "\n",
         "# Set the learning rate\n",
-        "learning_rate = None\n",
+        "learning_rate = 0.01\n",
         "\n",
         "# set the optimizer and pass in the learning_rate\n",
-        "optimizer = None\n",
+        "optimizer = tf.keras.optimizers.SGD(learning_rate=learning_rate, momentum=0.9)\n",
         "\n",
-        "### END CODE HERE ###"
+        "### END CODE HERE ###\n"
       ]
     },
     {
@@ -1913,14 +1890,13 @@
         "### START CODE HERE (Replace instances of `None` with your code) ###\n",
         "\n",
         "# define a list that contains the layers that you wish to fine tune\n",
-        "to_fine_tune = None\n",
+        "to_fine_tune = []\n",
+        "for var in detection_model.trainable_variables:\n",
+        "    if ('WeightSharedConvolutionalBoxPredictor/WeightSharedConvolutionalBoxHead' in var.name or\n",
+        "        'WeightSharedConvolutionalBoxPredictor/WeightSharedConvolutionalClassHead' in var.name):\n",
+        "        to_fine_tune.append(var)\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "]\n",
-        "\n",
-        "### END CODE HERE"
+        "### END CODE HERE\n"
       ]
     },
     {
@@ -2417,15 +2393,37 @@
         "      A scalar tensor representing the total loss for the input batch.\n",
         "    \"\"\"\n",
         "\n",
-        "    with tf.GradientTape() as tape:\n",
+        "        with tf.GradientTape() as tape:\n",
         "    ### START CODE HERE (Replace instances of `None` with your code) ###\n",
         "\n",
         "        # Preprocess the images\n",
+        "        preprocessed_image_list = []\n",
+        "        true_shape_list = []\n",
+        "        for image in image_list:\n",
+        "            processed_img, true_shape = model.preprocess(image)\n",
+        "            preprocessed_image_list.append(processed_img)\n",
+        "            true_shape_list.append(true_shape)\n",
         "\n",
+        "        preprocessed_image_tensor = tf.concat(preprocessed_image_list, axis=0)\n",
+        "        true_shape_tensor = tf.concat(true_shape_list, axis=0)\n",
         "\n",
+        "        # Make a prediction\n",
+        "        prediction_dict = model.predict(preprocessed_image_tensor, true_shape_tensor)\n",
         "\n",
+        "        # Calculate the total loss (sum of both losses)\n",
+        "        model.provide_groundtruth(\n",
+        "            groundtruth_boxes_list=groundtruth_boxes_list,\n",
+        "            groundtruth_classes_list=groundtruth_classes_list)\n",
+        "        losses_dict = model.loss(prediction_dict, true_shape_tensor)\n",
+        "        total_loss = losses_dict['Loss/localization_loss'] + losses_dict['Loss/classification_loss']\n",
         "\n",
+        "        # Calculate the gradients\n",
+        "        gradients = tape.gradient(total_loss, vars_to_fine_tune)\n",
         "\n",
+        "        # Optimize the model's selected variables\n",
+        "        optimizer.apply_gradients(zip(gradients, vars_to_fine_tune))\n",
+        "\n",
+        "        ### END CODE HERE ###\n",
         "\n",
         "\n",
         "\n",
@@ -2636,12 +2634,10 @@
         "    preprocessed_image, shapes = detection_model.preprocess(input_tensor)\n",
         "    prediction_dict = detection_model.predict(preprocessed_image, shapes)\n",
         "\n",
-        "    ### START CODE HERE (Replace instances of `None` with your code) ###\n",
+        "        ### START CODE HERE (Replace instances of `None` with your code) ###\n",
         "    # use the detection model's postprocess() method to get the the final detections\n",
-        "    detections = None\n",
-        "    ### END CODE HERE ###\n",
-        "\n",
-        "    return detections"
+        "    detections = detection_model.postprocess(prediction_dict, shapes)\n",
+        "    ### END CODE HERE ###\n"
       ]
     },
     {
@@ -2909,7 +2905,8 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
