--- a/Course 3 - Advance Computer Vision/W1/assignment/C3W1_Assignment.ipynb
+++ b/Course 3 - Advance Computer Vision/W1/assignment/C3W1_Assignment.ipynb
@@ -729,45 +729,23 @@
       },
       "outputs": [],
       "source": [
-        "import tensorflow as tf\n",
+        "def feature_extractor(inputs):\n",
+        "    ### YOUR CODE HERE ###\n",
         "\n",
-        "def build_model(input_shape):\n",
-        "  \"\"\"\n",
-        "  Builds a model to predict bounding boxes using a pre-trained base.\n",
+        "    # Create a mobilenet version 2 model object\n",
+        "    mobilenet_model = tf.keras.applications.mobilenet_v2.MobileNetV2(input_shape=(224, 224, 3),\n",
+        "                                                                     include_top=False,\n",
+        "                                                                     weights='imagenet')\n",
         "\n",
-        "  Args:\n",
-        "    input_shape: The shape of the input images (e.g., (224, 224, 3))\n",
         "\n",
-        "  Returns:\n",
-        "    A Keras model.\n",
-        "  \"\"\"\n",
-        "  # Load the VGG16 model, pre-trained on ImageNet, without the top classification layers\n",
-        "  base_model = tf.keras.applications.VGG16(\n",
-        "      input_shape=input_shape,\n",
-        "      include_top=False, # We don't need the final classification layers\n",
-        "      weights='imagenet'\n",
-        "  )\n",
+        "    # pass the inputs into this modle object to get a feature extractor for these inputs\n",
+        "    feature_extractor = mobilenet_model(inputs)\n",
         "\n",
-        "  # Freeze the layers of the base model so they are not trained\n",
-        "  base_model.trainable = False\n",
         "\n",
-        "  # Create the new model head for bounding box regression\n",
-        "  # Flatten the output of the base model\n",
-        "  x = base_model.output\n",
-        "  x = tf.keras.layers.Flatten()(x)\n",
+        "    ### END CODE HERE ###\n",
         "\n",
-        "  # Add a few dense layers for regression\n",
-        "  x = tf.keras.layers.Dense(128, activation='relu')(x)\n",
-        "  x = tf.keras.layers.Dense(64, activation='relu')(x)\n",
-        "\n",
-        "  # The final output layer has 4 neurons for the 4 bounding box coordinates.\n",
-        "  # A sigmoid activation ensures the output is between 0 and 1.\n",
-        "  output = tf.keras.layers.Dense(4, activation='sigmoid')(x)\n",
-        "\n",
-        "  # Create the final model\n",
-        "  model = tf.keras.Model(inputs=base_model.input, outputs=output)\n",
-        "\n",
-        "  return model\n"
+        "    # return the feature_extractor\n",
+        "    return feature_extractor\n"
       ]
     },
     {
@@ -803,20 +781,20 @@
         "    ### YOUR CODE HERE ###\n",
         "\n",
         "    # global average pooling 2d layer\n",
-        "    x = None\n",
+        "    x = tf.keras.layers.GlobalAveragePooling2D()(features)\n",
         "\n",
         "    # flatten layer\n",
-        "    x = None\n",
+        "    x = tf.keras.layers.Flatten()(x)\n",
         "\n",
         "    # 1024 Dense layer, with relu\n",
-        "    x = None\n",
+        "    x = tf.keras.layers.Dense(1024, activation='relu')(x)\n",
         "\n",
         "    # 512 Dense layer, with relu\n",
-        "    x = None\n",
+        "    x = tf.keras.layers.Dense(512, activation='relu')(x)\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
-        "    return x"
+        "    return x\n"
       ]
     },
     {
@@ -848,12 +826,12 @@
         "    ### YOUR CODE HERE ###\n",
         "\n",
         "    # Dense layer named `bounding_box`\n",
-        "    bounding_box_regression_output = None\n",
+        "    bounding_box_regression_output = tf.keras.layers.Dense(4, name='bounding_box')(x)\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
         "\n",
-        "    return bounding_box_regression_output"
+        "    return bounding_box_regression_output\n"
       ]
     },
     {
@@ -887,21 +865,21 @@
         "    ### YOUR CODE HERE ###\n",
         "\n",
         "    # features\n",
-        "    feature_cnn = None\n",
+        "    feature_cnn = feature_extractor(inputs)\n",
         "\n",
         "    # dense layers\n",
-        "    last_dense_layer = None\n",
+        "    last_dense_layer = dense_layers(feature_cnn)\n",
         "\n",
         "    # bounding box\n",
-        "    bounding_box_output = None\n",
+        "    bounding_box_output = bounding_box_regression(last_dense_layer)\n",
         "\n",
         "    # define the TensorFlow Keras model using the inputs and outputs to your model\n",
-        "    model = None\n",
+        "    model = tf.keras.Model(inputs=inputs, outputs=bounding_box_output)\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
         "\n",
-        "    return model"
+        "    return model\n"
       ]
     },
     {
@@ -936,18 +914,19 @@
         "    ### YOUR CODE HERE ###\n",
         "\n",
         "    # define the input layer\n",
-        "    inputs = None\n",
+        "    inputs = tf.keras.Input(shape=(224, 224, 3))\n",
         "\n",
         "    # create the model\n",
-        "    model = None\n",
+        "    model = final_model(inputs)\n",
         "\n",
         "    # compile your model\n",
-        "    None\n",
+        "    model.compile(optimizer=tf.keras.optimizers.SGD(momentum=0.9),\n",
+        "                  loss='mean_squared_error')\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
         "\n",
-        "    return model"
+        "    return model\n"
       ]
     },
     {
@@ -1044,23 +1023,25 @@
         "### START CODE HERE ###\n",
         "\n",
         "# Choose a batch size\n",
-        "BATCH_SIZE = None\n",
+        "BATCH_SIZE = 64\n",
         "\n",
         "# Get the length of the training set\n",
-        "length_of_training_dataset = None\n",
+        "length_of_training_dataset = len(visualization_training_dataset)\n",
         "\n",
         "# Get the length of the validation set\n",
-        "length_of_validation_dataset = None\n",
+        "length_of_validation_dataset = len(visualization_validation_dataset)\n",
         "\n",
         "# Get the steps per epoch (may be a few lines of code)\n",
-        "steps_per_epoch = None\n",
+        "steps_per_epoch = length_of_training_dataset // BATCH_SIZE\n",
+        "if length_of_training_dataset % BATCH_SIZE > 0:\n",
+        "    steps_per_epoch += 1\n",
         "\n",
         "# get the validation steps (per epoch) (may be a few lines of code)\n",
         "validation_steps = length_of_validation_dataset//BATCH_SIZE\n",
         "if length_of_validation_dataset % BATCH_SIZE > 0:\n",
         "    validation_steps += 1\n",
         "\n",
-        "### END CODE HERE"
+        "### END CODE HERE\n"
       ]
     },
     {
@@ -1107,9 +1088,13 @@
         "### YOUR CODE HERE ####\n",
         "\n",
         "# Fit the model, setting the parameters noted in the instructions above.\n",
-        "history = None\n",
+        "history = model.fit(training_dataset,\n",
+        "                    steps_per_epoch=steps_per_epoch,\n",
+        "                    validation_data=validation_dataset,\n",
+        "                    validation_steps=validation_steps,\n",
+        "                    epochs=EPOCHS)\n",
         "\n",
-        "### END CODE HERE ###"
+        "### END CODE HERE ###\n"
       ]
     },
     {
