--- a/Course 3 - Advance Computer Vision/W3/assignment/C3W3_Assignment.ipynb
+++ b/Course 3 - Advance Computer Vision/W3/assignment/C3W3_Assignment.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/psanogo/tensorflow-3-public/blob/main/Course%203%20-%20Advance%20Computer%20Vision/W3/assignment/C3W3_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "k6x_sGPQocpw"
       },
       "source": [
@@ -2267,8 +2257,7 @@
     "accelerator": "GPU",
     "colab": {
       "name": "Copy of C3W3_Assignment_Solution.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
